# gamelog

./: README.md  index.md  index.md.cp  meson.build  resources.xml
assets/: gamelog.ui  gamelog.ui~
data/: launcher.desktop  meson.build
inc/: data.h  interface.h
src/: data.c  interface.c  main.c
